fully strict OpenApiIT